# CMake-Ep042

./: CMakeLists.txt  README.adoc
app/: CMakeLists.txt
my_lib/: CMakeLists.txt
my_lib/src/: my_lib.cpp
